# play_bevy

./: .gitignore  Cargo.toml  LICENSE-MIT  index.html
.cargo/: config.toml
src/: lib.rs  main.rs
wasm/: bevy_game.js
