[package]
name = "play_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
# color-eyre = "0.6.2"
# rand = "0.8.5"

[dependencies.bevy]
# version = "0.11"
path = "../../repos/bevy/"
default-features = false
features = [
    # "dynamic_linking"
    # "trace_tracy",
    #
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "ktx2",
    "zstd",
    "vorbis",
    "x11",
    "filesystem_watcher",
    "bevy_gizmos",
    "android_shared_stdcxx",
    "tonemapping_luts",
    "default_font",
    #   "webgl2",
]

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-bindgen = "0.2.87"

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations

# Native
# cargo b --release

# WASM Dev 
# wasm-pack build --target web 
# basic-http-server .

# WASM Release
# wasm-pack build --target web --release
# basic-http-server .

# Wasm Dev - wasm-bindgen
# cargo b --target wasm32-unknown-unknown 
# wasm-bindgen --target web target/wasm32-unknown-unknown/debug/play_bevy.wasm --out-dir pkg --out-name play_bevy
# basic-http-server .

# Wasm Release - wasm-bingen
# cargo b --release --target wasm32-unknown-unknown 
# wasm-bindgen --target web target/wasm32-unknown-unknown/release/play_bevy.wasm --out-dir pkg --out-name play_bevy
# wasm-opt -Oz --output optimized.wasm pkg/play_bevy_bg.wasm
# mv optimized.wasm pkg/play_bevy_bg.wasm --force
# basic-http-server .
