[package]
name = "play_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
serde = { version = "1.0.133", optional = true }
bevy ={ path = "../../repos/bevy/", default-features = false }
# color-eyre = "0.6.2"
# rand = "0.8.5"
# argh = "0.1.12"

[features]
webgpu = [
    "bevy/animation",
    "bevy/bevy_asset",
    "bevy/bevy_audio",
    "bevy/bevy_gilrs",
    "bevy/bevy_scene",
    "bevy/bevy_winit",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_pbr",
    "bevy/bevy_gltf",
    "bevy/bevy_render",
    "bevy/bevy_sprite",
    "bevy/bevy_text",
    "bevy/bevy_ui",
    "bevy/multi-threaded",
    "bevy/png",
    "bevy/hdr",
    "bevy/ktx2",
    "bevy/zstd",
    "bevy/vorbis",
    "bevy/x11",
    "bevy/bevy_gizmos",
    "bevy/android_shared_stdcxx",
    "bevy/tonemapping_luts",
    "bevy/default_font",
]

default = [
    "webgpu",
    "bevy/webgl2",
]


[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations

# Native
# cargo b --release

# Wasm Dev - wasm-bindgen
# cargo b --target wasm32-unknown-unknown 
# wasm-bindgen --target web target/wasm32-unknown-unknown/debug/play_bevy.wasm --out-dir pkg --out-name play_bevy
# basic-http-server .

# Wasm Release - wasm-bingen
# cargo b --release --target wasm32-unknown-unknown --no-default-features --features 
# wasm-bindgen --no-typescript --out-name bevy_game --out-dir wasm --target web target/wasm32-unknown-unknown/release/play_bevy.wasm
# wasm-opt -Oz --output wasm/bevy_game_bg.wasm wasm/bevy_game_bg.wasm
# basic-http-server wasm
