[package]
name = "play_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
debug = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { path = "../../repos/bevy/" }

[features]
dev = ["bevy/dynamic_linking"]
webgpu = ["bevy/webgpu"]

# Native
# cargo b --release

# Wasm Dev - wasm-bindgen
# cargo b --target wasm32-unknown-unknown --features webgpu
# wasm-bindgen --target web target/wasm32-unknown-unknown/debug/play_bevy.wasm --ouGt-dir pkg --out-name play_bevy
# basic-http-server .

# Wasm Release - wasm-bingen
# cargo b --release --target wasm32-unknown-unknown --features webgpu
# wasm-bindgen --no-typescript --out-name bevy_game --out-dir wasm --target web target/wasm32-unknown-unknown/release/play_bevy.wasm
# wasm-opt -Oz --output wasm/bevy_game_bg.wasm wasm/bevy_game_bg.wasm
# basic-http-server .

[profile.release]
opt-level = 3
debug = 0
lto = true
codegen-units = 1
panic = "abort"
strip = true
